fixed the contrast colors on homepage, fixed collapsable and expandable burger button on mobile size

--- a/slice/src/components/section/section.scss
+++ b/slice/src/components/section/section.scss
@@ -7,6 +7,7 @@
   }
 
   &_inner-v-centered {
+    background-color: #253857;
     display: flex;
     flex-direction: column;
   }
